--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <div class="hero"><h1>Bem-vindo!</h1><p>Gerencie turmas, notas e presenças com um visual mais vibrante.</p></div>
     <div class="card">
       <h2 style="margin:0 0 8px">Entrar</h2>
-      <p style="margin-top:0;color:#555">Use: <code>admin@school.local / admin123</code>, <code>ana@school.local / prof123</code>, <code>carlos@school.local / aluno123</code></p>
+     <div class="alert" style="margin:8px 0 12px">
+  <strong>Perfis de teste:</strong>
+  <ul style="margin:8px 0 0 18px; padding:0">
+    <li><strong>Professor:</strong> ana@school.local / prof123</li>
+    <li><strong>Aluno:</strong> carlos@school.local / aluno123</li>
+    <li><strong>Coordenador:</strong> admin@school.local / admin123</li>
+  </ul>
+</div>
       <form id="loginForm" class="grid" style="gap:12px">
         <div><label for="email">E-mail</label><input id="email" name="email" type="email" required placeholder="voce@escola.com"/></div>
         <div><label for="password">Senha</label><input id="password" name="password" type="password" required placeholder="••••••••"/></div>
