--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container" style="max-width:520px;margin-top:8vh">
     <div class="brand" style="margin-bottom:12px"><span class="logo"></span><span style="font-size:22px">SchoolManager</span></div>
-    <div class="hero"><h1>Bem-vindo!</h1><p>Gerencie turmas, notas e presenças com visual vibrante e dados no IndexedDB.</p></div>
+    <div class="hero"><h1>Bem-vindo!</h1><p>Gerencie turmas, notas e presenças.</p></div>
     <div class="card fade-in">
       <h2 style="margin:0 0 8px">Entrar</h2>
       <div class="alert" style="margin:8px 0 12px">
