--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button class="btn" type="submit">Acessar</button>
       </form>
     </div>
-    <div class="footer">Tema branco e vermelho com toques vibrantes • IndexedDB persistente</div>
+    <div class="footer">SchoolManager </div>
   </div>
   <script src="app.js?v=16.1"></script>
   <script>
